# routes/api.php
@@ -9,5 +9,16 @@ Route::get('/user', function (Request $request) {
 
 Route::prefix('admin')->group(function () {
     Route::get('/cards', [App\Http\Controllers\Api\Admin\CardController::class, 'index']);
+    Route::get('/cards/{id}', [App\Http\Controllers\Api\Admin\CardController::class, 'show']);
     Route::post('/cards', [App\Http\Controllers\Api\Admin\CardController::class, 'store']);
+});
+
+Route::prefix('user')->group(function () {
+    Route::get('/cards/random', [App\Http\Controllers\Api\User\CardController::class, 'randomCard']);
+});
+
+Route::prefix('auth')->group(function () {
+    Route::post('/register', [App\Http\Controllers\Api\Admin\AuthController::class, 'register']);
+    Route::post('/login', [App\Http\Controllers\Api\Admin\AuthController::class, 'login']);
+    Route::post('/logout', [App\Http\Controllers\Api\Admin\AuthController::class, 'logout'])->middleware('auth:api');
 });
